sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:4: error: ';' expected but ',' found.
                  {test=true; for (i<-0 to (x-1-count)) {count=count+1, if (isSmaller((i+1), i)) {swap(i, (i+1)); test=false}}}
                                                                      ^